--- a/scss/civicrm/administer/communication-organisation/_message-templates.scss
+++ b/scss/civicrm/administer/communication-organisation/_message-templates.scss
@@ -18,3 +18,9 @@
     }
   }
 }
+
+#email_greeting,
+#postal_greeting,
+#addressee {
+  @extend .dataTables_wrapper;
+}
